deployments/prod/services/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service.buy-flower-be-service
  namespace: buy-flower
spec:
  selector:
    app: buy-flower-be
  ports:
    - port: 3001
      targetPort: 3000
      nodePort: 30001
  type: NodePort
