deployments/prod/services/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress.buy-flower-be-service
  namespace: buy-flower
  annotations:
    kubernetes.io/ingress.class: ingress-nginx
spec:
  rules:
    - host: api-buy-flower.votuan.xyz
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: buy-flower
                port:
                  number: 30001
